--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -6,8 +6,10 @@
 	margin-top: 80px;
 	margin-bottom: 120px;
 
-	.single-post & {
-		margin-top: 120px;
+	@media(min-width: 1025px) {
+		.single-post & {
+			margin-top: 120px;
+		}
 	}
 }
 .site-main {
